--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stellar Rinat's Portfolio</title>
   <link rel="icon" href="./assets/star-icon.svg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Iceland&family=JetBrains+Mono&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
 
   <header class="header">
-
     <nav class="nav primary-container">
       <p class="nav__logo">Rinat's Portfolio</p>
       <div class="list-wrapper">
@@ -32,7 +36,7 @@
     </nav>
 
     <article class="lead">
-      <h1 class="lead__heading">Hi, I'm Rinat.<span>Full-stack web-developer.</span></h1>
+      <h1 class="lead__heading">Hi, I'm Rinat.<span>Front-end engineer.</span></h1>
       <p class="lead__cta">Drag sphere to see come magic</p>
       <p class="lead__paragraph">Scroll to get stellar experience.</p>
     </article>
@@ -44,15 +48,17 @@
   <main class="main medium-container">
 
     <section id="about" class="about">
-      <h2 class="about__heading">About me</h1>
+      <h2 class="section-heading">About me</h1>
         <p class="about__description">
-          I am the Full-stack web developer with the passion for learning new technologies
+          I am the Front-end web developer with the passion for learning new technologies
           and constantly developing myself as a programmer. I use MERN stack (with MySQL as M),
           although I am proficient with both SQL and NoSQL databases.
         </p>
         <p class="about__description">
-          I am a third-year student in the Higher School of Economics in Moscow,
-          where for three years I have been studying web-development, algorithms and data sctructures.
+          Since July 2023 I have been working as a Frontend engineer in Sber, Moscow.
+          In last year I have successfully lead the development of the new microservice and
+          the complete rewrite of the legacy microservice into the new stack.
+          Also I have taken crucial part in the creation of the brand-new design system of my product
         </p>
         <div class="techs">
           <h3 class="techs__title">My tech stack</h3>
@@ -72,67 +78,55 @@
             <li><img src="./assets/git.svg" alt="Git-icon" class="techs__image"></li>
           </ul>
         </div>
-        <div class="stats">
-          <h3 class="stats__title">Some numbers</h3>
-          <div class="stats__wrapper">
-            <div class="numbers">
-              <p class="numbers__heading">10000+</p>
-              <p>lines of code every month</p>
+    </section>
+
+    <section id="experience" class="experience">
+      <h2 class="experience__heading">Professional experience</h1>
+        <article class="job">
+          <div class="job__titling">
+            <h3 class="job__place local-heading">SberBank. Central Archive Service (CARS)</h3>
+            <p class="job__title">Frontend engineer (from July 2023)</p>
+          </div>
+          <div class="job__description">
+            <div class="responsibilities">
+              <p style="font-size: 1.25rem; margin-bottom: .5rem; font-weight: 500">Responsibilities</p>
+              <ul class="responsibilities__list">
+                <li class="responsibilities__item"> - Leading the development of new microservices through analytics,
+                  planning, implementation and deploy</li>
+                <li class="responsibilities__item"> - Taking active part in migrating 4 existing microservices into new
+                  design system</li>
+                <li class="responsibilities__item"> - Maintaining existing microservices</li>
+              </ul>
             </div>
-            <div class="numbers">
-              <p class="numbers__heading">350+</p>
-              <p>lines of code every day</p>
-            </div>
-            <div class="numbers">
-              <p class="numbers__heading">180 days</p>
-              <p>coding without missing a day</p>
+            <div class="achievements">
+              <p style="font-size: 1.25rem; margin-bottom: .5rem; font-weight: 500;">Achievements</p>
+              <ul class="achievements__list">
+                <li class="achievements__item"> 
+                  - Migrated microservice with 40k lines of code from legacy architecture
+                  (RxJS, Redux, Ajax) to modern solutions (Redux Toolkit, React Query, Styled Components)
+                </li>
+                <li class="achievements__item"> 
+                  - Developed MVP of the new microservice in 2 weeks with pixel-perfect design 
+                  and clean business logic architecture
+                </li>
+              </ul>
             </div>
           </div>
-        </div>
+        </article>
     </section>
 
     <section id="projects" class="projects">
       <h2 class="projects__heading">My projects</h2>
 
       <div class="projects__container">
-        <div class="project__container">
-          <article class="project">
-            <img src="./assets/blog.png" alt="Expressive-blog" class="project__cover project__cover--expressive">
-            <div class="project__info-wrapper">
-              <h2 class="project__title">Expressive. Blog.</h2>
-              <div class="project__description">
-                <ul class="functionality">
-                  <li> - This project is a personal blog app, which I have created for personal use</li>
-                  <li> - Navigate different pages via React-Router</li>
-                  <li> - Your posts are saved in local storage</li>
-                  <li> - Create posts</li>
-                  <li> - Delete posts</li>
-                  <li> - Edit posts</li>
-                  <li> - Search your posts</li>
-                </ul>
-                <ul class="technologies">
-                  <li><img src="./assets/React-icon.svg" alt="React-icon"></li>
-                  <li><img src="./assets/sass-1.svg" alt="Sass-icon"></li>
-                </ul>
-              </div>
-            </div>
-          </article>
-          <ul class="project__links">
-            <a target="_blank" href="https://github.com/rdtabb/Express-blog.github.io" class="link"><img
-                src="./assets/github-mark-white.svg" alt=""></a>
-            <a target="_blank" href="https://expressive-blog.netlify.app/" class="link"><img src="./assets/internet.png"
-                alt=""></a>
-          </ul>
-        </div>
 
         <div class="project__container">
           <article class="project project--fullstack">
             <img src="./assets/blog.png" alt="Expressive-blog" class="project__cover project__cover--fullstack">
             <div class="project__info-wrapper">
-              <h2 class="project__title">Expressive Full-stack. In process.</h2>
+              <h3 class="project__title">Expressive Full-stack. In process.</h3>
               <div class="project__description">
                 <ul class="functionality">
-                  <li> - This is the remake of the "Expressive Blog" project</li>
                   <li> - This is full-stack application with user-authentication</li>
                   <li> - After registration and login users can make text posts in their profiles</li>
                   <li> - Users can view and comment each other's posts</li>
@@ -153,7 +147,7 @@
           </article>
           <ul class="project__links">
             <a target="_blank" href="https://github.com/rdtabb/Expressive.-Full-stack-blog" class="link"><img
-                src="./assets/github-mark-white.svg" alt=""></a>
+                src="./assets/github-mark-white.svg" alt="Github link"></a>
           </ul>
         </div>
 
@@ -161,7 +155,7 @@
           <article class="project project--meets">
             <img src="./assets/meets.png" alt="Meets-network" class="project__cover project__cover--meets">
             <div class="project__info-wrapper">
-              <h2 class="project__title">Meets. Social network.</h2>
+              <h3 class="project__title">Meets. Social network.</h3>
               <div class="project__description">
                 <ul class="functionality">
                   <li> - Full-stack social network application with user authentication and signout functionality</li>
