fix: adds anchor link to experience section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="list-wrapper">
         <ul class="nav-list">
           <li class="nav-list__item"><a href="#about" class="nav-list__link">About</a></li>
+          <li class="nav-list__item"><a href="#experience" class="nav-list__link">Experience</a></li>
           <li class="nav-list__item"><a href="#projects" class="nav-list__link">Projects</a></li>
           <li class="nav-list__item"><a href="#contact" class="nav-list__link">Contact</a></li>
         </ul>
@@ -48,35 +49,38 @@
   <main class="main medium-container">
 
     <section id="about" class="about">
-      <h2 class="section-heading">About me</h1>
-        <p class="about__description">
-          I am the Front-end web developer with the passion for learning new technologies
-          and constantly developing myself as a programmer. I use MERN stack (with MySQL as M),
-          although I am proficient with both SQL and NoSQL databases.
-        </p>
-        <p class="about__description">
-          Since July 2023 I have been working as a Frontend engineer in Sber, Moscow.
-          In last year I have successfully lead the development of the new microservice and
-          the complete rewrite of the legacy microservice into the new stack.
-          Also I have taken crucial part in the creation of the brand-new design system of my product
-        </p>
-        <div class="techs">
-          <h3 class="techs__title">My tech stack</h3>
-          <ul class="techs__list">
-            <li><img src="./assets/html.svg" alt="Html-icon" class="techs__image"></li>
-            <li><img src="./assets/sass-1.svg" alt="Sass-icon" class="techs__image"></li>
-            <li><img src="./assets/jslogo.svg" alt="JS-icon" class="techs__image"></li>
-            <li><img src="./assets/typescript.svg" alt="TS-icon" class="techs__image"></li>
-            <li><img src="./assets/threeproper.svg" alt="threejs-icon" class="techs__image"></li>
-            <li><img src="./assets/React-icon.svg" alt="React-icon" class="techs__image"></li>
-            <li><img src="./assets/redux.svg" alt="Redux-icon" class="techs__image"></li>
-            <li><img src="./assets/firebase.svg" alt="Firebase-icon" class="techs__image"></li>
-            <li><img src="./assets/mysql.svg" alt="Mysql-icon" class="techs__image"></li>
-            <li><img src="./assets/react-query-icon.svg" alt="Mysql-icon" class="techs__image query-icon"></li>
-            <li><img src="./assets/express.svg" alt="Express-icon" class="techs__image"></li>
-            <li><img src="./assets/nodejs-icon.svg" alt="Node-icon" class="techs__image"></li>
-            <li><img src="./assets/git.svg" alt="Git-icon" class="techs__image"></li>
-          </ul>
+      <div class="about-wrapper">
+      
+        <h2 class="section-heading">About me</h1>
+          <p class="about__description">
+            I am the Front-end web developer with the passion for learning new technologies
+            and constantly developing myself as a programmer. I use MERN stack (with MySQL as M),
+            although I am proficient with both SQL and NoSQL databases.
+          </p>
+          <p class="about__description">
+            Since July 2023 I have been working as a Frontend engineer in Sber, Moscow.
+            In last year I have successfully lead the development of the new microservice and
+            the complete rewrite of the legacy microservice into the new stack.
+            Also I have taken crucial part in the creation of the brand-new design system of my product
+          </p>
+          <div class="techs">
+            <h3 class="techs__title">My tech stack</h3>
+            <ul class="techs__list">
+              <li><img src="./assets/html.svg" alt="Html-icon" class="techs__image"></li>
+              <li><img src="./assets/sass-1.svg" alt="Sass-icon" class="techs__image"></li>
+              <li><img src="./assets/jslogo.svg" alt="JS-icon" class="techs__image"></li>
+              <li><img src="./assets/typescript.svg" alt="TS-icon" class="techs__image"></li>
+              <li><img src="./assets/threeproper.svg" alt="threejs-icon" class="techs__image"></li>
+              <li><img src="./assets/React-icon.svg" alt="React-icon" class="techs__image"></li>
+              <li><img src="./assets/redux.svg" alt="Redux-icon" class="techs__image"></li>
+              <li><img src="./assets/firebase.svg" alt="Firebase-icon" class="techs__image"></li>
+              <li><img src="./assets/mysql.svg" alt="Mysql-icon" class="techs__image"></li>
+              <li><img src="./assets/react-query-icon.svg" alt="Mysql-icon" class="techs__image query-icon"></li>
+              <li><img src="./assets/express.svg" alt="Express-icon" class="techs__image"></li>
+              <li><img src="./assets/nodejs-icon.svg" alt="Node-icon" class="techs__image"></li>
+              <li><img src="./assets/git.svg" alt="Git-icon" class="techs__image"></li>
+            </ul>
+          </div>
         </div>
     </section>
 
