feat: adds nextjs icon

--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
                         <h3 class="techs__title">My tech stack</h3>
                         <ul class="techs__list">
                             <li><img src="./assets/typescript.svg" alt="TS-icon" class="techs__image"></li>
-                            <li><img src="./assets/jslogo.svg" alt="JS-icon" class="techs__image"></li>
                             <li><img src="./assets/React-icon.svg" alt="React-icon" class="techs__image"></li>
+                            <li><img src="./assets/nextjs-white.svg" alt="Next-icon" class="techs__image"></li>
                             <li><img src="./assets/solid-js.svg" alt="Solid-icon" class="techs__image"></li>
                             <li><img src="./assets/redux.svg" alt="Redux-icon" class="techs__image"></li>
-                            <li><img src="./assets/react-query-icon.svg" alt="Mysql-icon"
-                                    class="techs__image query-icon"></li>
                             <li><img src="./assets/git.svg" alt="Git-icon" class="techs__image"></li>
                             <li><img src="./assets/sass-1.svg" alt="Sass-icon" class="techs__image"></li>
                             <li><img src="./assets/threeproper.svg" alt="threejs-icon" class="techs__image"></li>
@@ -122,8 +120,8 @@
                         <h3 class="techs__title">Tech I used professionally</h3>
                         <ul class="techs__list">
                             <li><img src="./assets/typescript.svg" alt="TS-icon" class="techs__image"></li>
-                            <li><img src="./assets/jslogo.svg" alt="JS-icon" class="techs__image"></li>
                             <li><img src="./assets/React-icon.svg" alt="React-icon" class="techs__image"></li>
+                            <li><img src="./assets/nextjs-white.svg" alt="Next-icon" class="techs__image"></li>
                             <li><img src="./assets/solid-js.svg" alt="Solid-icon" class="techs__image"></li>
                             <li><img src="./assets/redux.svg" alt="Redux-icon" class="techs__image"></li>
                             <li><img src="./assets/react-query-icon.svg" alt="Mysql-icon"
@@ -148,8 +146,8 @@
                             <h3 class="project__title">Expressive Full-stack. In progress.</h3>
                             <div class="project__description">
                                 <ul class="functionality">
-                                    <li> - This is a full-stack application with user-authentication</li>
-                                    <li> - After registration and login users can make text posts on their profiles</li>
+                                    <li> - Going into v1.0.0 soon</li>
+                                    <li> - Fully featured credentials auth functionality with server sessions</li>
                                     <li> - Users can view and comment on each other's posts</li>
                                     <li> - Frontend tech: React, SASS, Typescript</li>
                                     <li> - Backend tech: ExpressJS, NodeJS, MySQL</li>
@@ -180,9 +178,8 @@
                             <h3 class="project__title">Meets. Social network.</h3>
                             <div class="project__description">
                                 <ul class="functionality">
+                                    <li> - Currently on v1.2.0, going into v2.0.0 soon</li>
                                     <li> - Full-stack social network application with user authentication</li>
-                                    <li> - After authenticating, you can edit your profile and add posts with photos
-                                    </li>
                                     <li> - You can view other users' profiles and like their posts</li>
                                     <li> - All the posts you liked can be viewed on a separate page in your profile
                                     </li>
@@ -222,7 +219,7 @@
                 </h2>
                 <div class="cta__contacts">
                     <p class="cta__email">rintabaev@gmail.com</p>
-                    <p class="cta__number">+79963549619</p>
+                    <p class="cta__number">+79777989388</p>
                 </div>
                 <p class="submitted">Form submitted successfully!</p>
             </div>
