feat: updates text, adds nextjs/jotai to skills

--- a/index.html
+++ b/index.html
@@ -54,30 +54,44 @@
                 <h2 class="section-heading">About me</h1>
                     <p class="about-wrapper__description">
                         I am a Front-end web developer with a passion for learning new technologies and constantly
-                        developing myself as a programmer. I have extensive professional experience designing React/SolidJS applications.
-                        Nevertheless, my excellent knowledge of vanilla JS/TS allows me to quickly become proficient with any new front-end tech.
+                        developing myself as a programmer. I have extensive professional experience designing
+                        React/NextJS/SolidJS applications.
+                        Nevertheless, my excellent knowledge of vanilla JS/TS allows me to quickly become proficient
+                        with any new front-end tech (also i use neovim btw).
                     </p>
                     <p class="about-wrapper__description">
                         Since July 2023 I have been working as a Frontend engineer in Sber, Moscow. In the last year, I
-                        have successfully led the development of the several new microservices and the complete rewrite of the
-                        legacy microservice into the new stack. Also, I have taken a crucial part in the creation of the
-                        brand-new design system for my product.
+                        have successfully led the development of several new microservices and the complete rewrite
+                        of the legacy microservice into the new stack. My ability to take initiative/responsibility and create
+                        effective communication within team makes me a valuable asset to my company.
                     </p>
                     <div class="techs">
                         <h3 class="techs__title">My tech stack</h3>
                         <ul class="techs__list">
-                            <li><img src="./assets/typescript.svg" alt="TS-icon" class="techs__image"></li>
-                            <li><img src="./assets/React-icon.svg" alt="React-icon" class="techs__image"></li>
-                            <li><img src="./assets/nextjs-white.svg" alt="Next-icon" class="techs__image"></li>
-                            <li><img src="./assets/solid-js.svg" alt="Solid-icon" class="techs__image"></li>
-                            <li><img src="./assets/redux.svg" alt="Redux-icon" class="techs__image"></li>
-                            <li><img src="./assets/git.svg" alt="Git-icon" class="techs__image"></li>
-                            <li><img src="./assets/sass-1.svg" alt="Sass-icon" class="techs__image"></li>
-                            <li><img src="./assets/threeproper.svg" alt="threejs-icon" class="techs__image"></li>
-                            <li><img src="./assets/nodejs-icon.svg" alt="Node-icon" class="techs__image"></li>
-                            <li><img src="./assets/express.svg" alt="Express-icon" class="techs__image"></li>
-                            <li><img src="./assets/mysql.svg" alt="Mysql-icon" class="techs__image"></li>
-                            <li><img src="./assets/firebase.svg" alt="Firebase-icon" class="techs__image"></li>
+                            <li><img src="./assets/React-icon.svg" alt="React-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/nextjs-white.svg" alt="Next-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/typescript.svg" alt="TS-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/redux.svg" alt="Redux-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li style="display: grid; place-content: center;"><img src="./assets/jotai.svg"
+                                    alt="Jotai-icon" height="64px" width="64px" /></li>
+                            <li><img src="./assets/git.svg" alt="Git-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/sass-1.svg" alt="Sass-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/threeproper.svg" alt="threejs-icon" class="techs__image"
+                                    height="64px" width="64px" /></li>
+                            <li><img src="./assets/nodejs-icon.svg" alt="Node-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/express.svg" alt="Express-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/mysql.svg" alt="Mysql-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/firebase.svg" alt="Firebase-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
                         </ul>
                     </div>
             </div>
@@ -88,7 +102,7 @@
                 <h2 class="experience__heading">Professional experience</h2>
                 <article class="job">
                     <div class="job__titling">
-                        <h3 class="job__place local-heading">SberBank. Central Archive Service (CARS)</h3>
+                        <h3 class="job__place local-heading">Sber. Central Archive Service (CARS)</h3>
                         <p class="job__title">Frontend engineer (since July 2023)</p>
                     </div>
                     <div class="job__description">
@@ -105,8 +119,8 @@
                             <p style="font-size: 1.25rem; margin-bottom: .5rem; font-weight: 500;">Achievements</p>
                             <ul class="achievements__list">
                                 <li class="achievements__item">
-                                    - Migrated microservice with 40k lines of code from legacy architecture
-                                    (RxJS, Redux, Ajax) to modern solutions (Redux Toolkit, React Query, ReactV18,
+                                    - Migrated microservice with 100k lines of code from legacy architecture
+                                    (RxJS, Redux, Ajax) to modern solutions (React@18, NextJS@14, Redux Toolkit, Jotai, React Query,
                                     react-hook-form)
                                 </li>
                                 <li class="achievements__item">
@@ -119,14 +133,20 @@
                     <div class="techs" style="margin-top: 1rem;">
                         <h3 class="techs__title">Tech I used professionally</h3>
                         <ul class="techs__list">
-                            <li><img src="./assets/typescript.svg" alt="TS-icon" class="techs__image"></li>
-                            <li><img src="./assets/React-icon.svg" alt="React-icon" class="techs__image"></li>
-                            <li><img src="./assets/nextjs-white.svg" alt="Next-icon" class="techs__image"></li>
-                            <li><img src="./assets/solid-js.svg" alt="Solid-icon" class="techs__image"></li>
-                            <li><img src="./assets/redux.svg" alt="Redux-icon" class="techs__image"></li>
+                            <li><img src="./assets/React-icon.svg" alt="React-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/nextjs-white.svg" alt="Next-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/typescript.svg" alt="TS-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li><img src="./assets/redux.svg" alt="Redux-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
+                            <li style="display: grid; place-content: center;"><img src="./assets/jotai.svg"
+                                    alt="Jotai-icon" height="64px" width="64px" /></li>
                             <li><img src="./assets/react-query-icon.svg" alt="Mysql-icon"
-                                    class="techs__image query-icon"></li>
-                            <li><img src="./assets/git.svg" alt="Git-icon" class="techs__image"></li>
+                                    class="techs__image query-icon" height="64px" width="64px" /></li>
+                            <li><img src="./assets/git.svg" alt="Git-icon" class="techs__image" height="64px"
+                                    width="64px" /></li>
                         </ul>
                     </div>
                 </article>
@@ -147,19 +167,28 @@
                             <div class="project__description">
                                 <ul class="functionality">
                                     <li> - Going into v1.0.0 soon</li>
-                                    <li> - Fully featured credentials auth functionality with server sessions</li>
-                                    <li> - Users can view and comment on each other's posts</li>
-                                    <li> - Frontend tech: React, SASS, Typescript</li>
-                                    <li> - Backend tech: ExpressJS, NodeJS, MySQL</li>
+                                    <li> - This is fancier remake of beginner-level "Expressive" project <a
+                                            class="project--fullstack__desclink"
+                                            href="https://github.com/rdtabb/Express-blog.github.io" target="_blank"
+                                            rel="noreferrer">(github link)</a></li>
+                                    <li> - Custom authentication system with password encryption and server sessions
+                                    </li>
+                                    <li> - Users can communicate by commenting and liking each others posts</li>
+                                    <li> - Frontend: React, Typescript, SCSS</li>
+                                    <li> - Backend: ExpressJS, NodeJS, MySQL</li>
                                 </ul>
                                 <ul class="technologies technologies--fullstack">
-                                    <li><img src="./assets/React-icon.svg" alt="React-icon"></li>
-                                    <li><img src="./assets/typescript.svg" alt="React-icon"></li>
+                                    <li><img src="./assets/React-icon.svg" alt="React-icon" height="64px"
+                                            width="64px" /></li>
+                                    <li><img src="./assets/typescript.svg" alt="React-icon" height="64px"
+                                            width="64px" /></li>
                                     <li><img src="./assets/react-query-icon.svg" alt="Mysql-icon"
-                                            class="techs__image query-icon"></li>
-                                    <li><img src="./assets/mysql.svg" alt="Sass-icon"></li>
-                                    <li><img src="./assets/express.svg" alt="Sass-icon"></li>
-                                    <li><img src="./assets/nodejs-icon.svg" alt="Sass-icon"></li>
+                                            class="techs__image query-icon" height="64px" width="64px" /></li>
+                                    <li><img src="./assets/mysql.svg" alt="Sass-icon" height="64px" width="64px" /></li>
+                                    <li><img src="./assets/express.svg" alt="Sass-icon" height="64px" width="64px" />
+                                    </li>
+                                    <li><img src="./assets/nodejs-icon.svg" alt="Sass-icon" height="64px"
+                                            width="64px" /></li>
                                 </ul>
                             </div>
                         </div>
@@ -178,23 +207,29 @@
                             <h3 class="project__title">Meets. Social network.</h3>
                             <div class="project__description">
                                 <ul class="functionality">
-                                    <li> - Currently on v1.2.0, going into v2.0.0 soon</li>
+                                    <li> - Currently on v1.3.0</li>
+                                    <li> - Soon going into v1.4.0. Undergoing migration from react-router-dom to
+                                        tanstack-router@v1.0.0</li>
                                     <li> - Full-stack social network application with user authentication</li>
-                                    <li> - You can view other users' profiles and like their posts</li>
-                                    <li> - All the posts you liked can be viewed on a separate page in your profile
-                                    </li>
-                                    <li> - You can send messages to any user in a separate chat room</li>
-                                    <li> - Backend is handled by Firebase, while Frontend is made via React, TS and SASS
-                                    </li>
+                                    <li> - You can communicate with other users via posts, likes, comments and messages
+                                        in separate chat rooms</li>
+                                    <li> - Meets' design system is mostly custom, although auth page is built with
+                                        Shadcn/ui</li>
+                                    <li> - Frontend: React, Typescript, Jotai, SCSS, Shadcn/ui; Backend: Firebase</li>
                                 </ul>
                                 <ul class="technologies">
-                                    <li><img src="./assets/React-icon.svg" alt="React-icon"></li>
-                                    <li><img src="./assets/typescript.svg" alt="Sass-icon"></li>
+                                    <li><img src="./assets/React-icon.svg" alt="React-icon" height="64px"
+                                            width="64px" /></li>
+                                    <li><img src="./assets/typescript.svg" alt="Sass-icon" height="64px" width="64px" />
+                                    </li>
                                     <li><img src="./assets/react-query-icon.svg" alt="Mysql-icon"
-                                            class="techs__image query-icon"></li>
-                                    <li><img src="./assets/redux.svg" alt="Redux-icon"></li>
-                                    <li><img src="./assets/sass-1.svg" alt="Sass-icon"></li>
-                                    <li><img src="./assets/firebase.svg" alt="firebase-icon"></li>
+                                            class="techs__image query-icon" height="64px" width="64px" /></li>
+                                    <li><img src="./assets/jotai.svg" alt="Jotai-icon" height="64px" width="64px" />
+                                    </li>
+                                    <li><img src="./assets/sass-1.svg" alt="Sass-icon" height="64px" width="64px" />
+                                    </li>
+                                    <li><img src="./assets/firebase.svg" alt="firebase-icon" height="64px"
+                                            width="64px" /></li>
                                 </ul>
                             </div>
                         </div>
